<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <import type="com.github.ayltai.pricecalculator.model.UnitType" />
        <import type="com.github.ayltai.pricecalculator.util.Converter" />
        <variable
            name="item"
            type="com.github.ayltai.pricecalculator.model.Item" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_margin="@dimen/space8"
        app:contentPaddingLeft="@dimen/space16"
        app:contentPaddingRight="@dimen/space16"
        app:contentPaddingTop="@dimen/space16"
        app:contentPaddingBottom="@dimen/space8"
        style="@style/Card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/priceLayout"
                    android:layout_weight="0.6"
                    android:hint="@string/label_price"
                    app:startIconDrawable="@drawable/ic_money_black_24dp"
                    app:startIconContentDescription="@string/label_price"
                    style="@style/TextLayout">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/price"
                        android:inputType="numberDecimal"
                        android:text="@={Converter.doubleToString(item.price)}"
                        tools:text="12.3"
                        style="@style/Text.Input" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/quantityLayout"
                    android:layout_weight="0.4"
                    android:hint="@string/label_quantity"
                    style="@style/TextLayout">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/quantity"
                        android:inputType="number"
                        android:text="@={Converter.integerToString(item.quantity)}"
                        tools:text="2"
                        style="@style/Text.Input" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sizeLayout"
                    android:layout_weight="0.6"
                    android:hint="@{item.unit.type}"
                    tools:hint="@string/label_weight"
                    style="@style/TextLayout">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/size"
                        android:inputType="numberDecimal"
                        android:text="@={Converter.doubleToString(item.size)}"
                        tools:text="384"
                        style="@style/Text.Input" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/unitLayout"
                    android:layout_weight="0.4"
                    android:hint="@string/label_unit"
                    android:visibility="@{item.unit.type.id == UnitType.NONE.id ? View.GONE : View.VISIBLE}"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_arrow_drop_down_black_24dp"
                    style="@style/TextLayout">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/unit"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:text="@={Converter.unitToString(item.unit)}"
                        tools:text="g"
                        style="@style/Text" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/action_clear"
                    android:text="@string/action_clear"
                    style="@style/Button" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/action_remove"
                    android:text="@string/action_remove"
                    style="@style/Button" />
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/space16"
                    android:layout_gravity="center_vertical">
                    <ImageView
                        android:id="@+id/favorite"
                        android:layout_width="@dimen/iconSmall"
                        android:layout_height="@dimen/iconSmall"
                        android:layout_gravity="end"
                        android:tint="?attr/accentColor"
                        android:visibility="@{item.best ? View.VISIBLE : View.GONE}"
                        app:srcCompat="@drawable/ic_favorite_black_24dp" />
                    <TextView
                        android:id="@+id/diff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textColor="?attr/accentColor"
                        android:text='@{String.format("+%s%%", String.valueOf(Math.max(1, (int)Math.round(item.diff * 100))))}'
                        android:visibility="@{item.diff > 0 ? View.VISIBLE : View.GONE}"
                        tools:text="+7%" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
